# sharp_lab

./: .gitignore  README.md  pyproject.toml  setup.py  sharp_lab.example.json  sharp_lab.spec
.github/workflows/: release.yml
blender_addon/: README.md
blender_addon/sharp_lab_blender/: __init__.py
scripts/: build_blender_addon.py  build_blender_addon_windows.py  build_ml_sharp_runtime.py
src/sharp_lab/: __init__.py  __main__.py  app.py  cli.py  config.py  desktop.py  downloads.py  models.py  release.py
src/sharp_lab/discovery/: __init__.py  importer.py
src/sharp_lab/export/: __init__.py  manager.py
src/sharp_lab/pipeline/: __init__.py  service.py
src/sharp_lab/sharp/: __init__.py  integration.py  ply.py
src/sharp_lab/ui/: __init__.py  server.py
src/sharp_lab/ui/static/: app.css  app.js  blender-addon.html  blender-addon.js  index.html  setup.css  setup.html  setup.js
tests/: test_blender_addon_build.py  test_blender_addon_runtime.py  test_build_ml_sharp_runtime.py  test_cli.py  test_config.py  test_downloads.py  test_release.py  test_ui_server.py  test_workflow.py
web_viewer/: README.md  app.js  index.html  styles.css
