[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharp_lab"
version = "0.1.6"
description = "Local tools for experimenting with iPhone photos and preparing assets for Apple SHARP workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Andrea Korkeamaki" }
]
keywords = ["photos", "image-processing", "cli", "workflow", "apple"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Topic :: Multimedia :: Graphics"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
release = [
  "build>=1.2",
  "pyinstaller>=6.0"
]

[project.scripts]
sharp-lab = "sharp_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sharp_lab.ui" = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
